--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="item">
                             <a href="#!">
                                 <img
-                                    src="./assets/img/featured-1.jpg"
+                                    src="./assets/img/Featured-1.jpg"
                                     alt="Nikko Apartments"
                                     class="thumb"
                                 />
@@ -230,7 +230,7 @@
                         <div class="item">
                             <a href="#!">
                                 <img
-                                    src="./assets/img/featured-2.jpg"
+                                    src="./assets/img/Featured-2.jpg"
                                     alt="CouCou Homestead"
                                     class="thumb"
                                 />
@@ -276,7 +276,7 @@
                         <div class="item">
                             <a href="#!">
                                 <img
-                                    src="./assets/img/featured-3.jpg"
+                                    src="./assets/img/Featured-3.jpg"
                                     alt="CouCou Homestead"
                                     class="thumb"
                                 />
