--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
         <title>F8 Project 01</title>
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
@@ -85,14 +88,21 @@
                         <p class="desc">5 Star Ratings (2k+ Review)</p>
                     </div>
                     <div class="images">
-                        <img src="./assets/img/MeUndies.svg" alt="Client 1" />
-                        <img src="./assets/img/slack.svg" alt="Client 2" />
-                        <img src="./assets/img/amazon.svg" alt="Client 3" />
-                        <img
-                            src="./assets/img/woocommerce.svg"
-                            alt="Client 4"
-                        />
-                        <img src="./assets/img/sitepoint.svg" alt="Client 5" />
+                        <a href="#!">
+                            <img src="./assets/img/MeUndies.svg" alt="Client 1" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/slack.svg" alt="Client 2" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/amazon.svg" alt="Client 3" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/woocommerce.svg" alt="Client 4" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/sitepoint.svg" alt="Client 5" />
+                        </a>
                     </div>
                 </div>
             </div>
@@ -189,7 +199,7 @@
                         <div class="item">
                             <a href="#!">
                                 <img
-                                    src="./assets/img/featured-1.jpg"
+                                    src="./assets/img/Featured-1.jpg"
                                     alt="Nikko Apartments"
                                     class="thumb"
                                 />
@@ -230,7 +240,7 @@
                         <div class="item">
                             <a href="#!">
                                 <img
-                                    src="./assets/img/featured-2.jpg"
+                                    src="./assets/img/Featured-2.jpg"
                                     alt="CouCou Homestead"
                                     class="thumb"
                                 />
@@ -276,7 +286,7 @@
                         <div class="item">
                             <a href="#!">
                                 <img
-                                    src="./assets/img/featured-3.jpg"
+                                    src="./assets/img/Featured-3.jpg"
                                     alt="CouCou Homestead"
                                     class="thumb"
                                 />
@@ -560,24 +570,42 @@
                         </div>
                         <div class="colum">
                             <h3 class="heading">Get in touch</h3>
-                            <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                            <p class="desc">
+                                You’ll find your next home, in any style you
+                                prefer.
+                            </p>
                             <div class="social">
                                 <a href="#!" class="social-link">
-                                    <img src="./assets/img/Facebook.svg" alt="Facebook">
+                                    <img
+                                        src="./assets/img/Facebook.svg"
+                                        alt="Facebook"
+                                    />
                                 </a>
                                 <a href="#!" class="social-link">
-                                    <img src="./assets/img/twitter.svg" alt="Twitter">
+                                    <img
+                                        src="./assets/img/twitter.svg"
+                                        alt="Twitter"
+                                    />
                                 </a>
                                 <a href="#!" class="social-link">
-                                    <img src="./assets/img/lindedin.svg" alt="Lindedin">
+                                    <img
+                                        src="./assets/img/lindedin.svg"
+                                        alt="Lindedin"
+                                    />
                                 </a>
                             </div>
                         </div>
                     </div>
 
                     <div class="row row-bottom">
-                        <img src="./assets/img/Logo.png" alt="Logo" class="logo">
-                        <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                        <img
+                            src="./assets/img/Logo.png"
+                            alt="Logo"
+                            class="logo"
+                        />
+                        <p class="copyright">
+                            Copyright 2020.com, All rights reserved.
+                        </p>
                     </div>
                 </div>
             </footer>
