--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                     <!-- Navbar -->
                     <nav class="navbar">
                         <!-- Logo -->
-                        <img src="./assets/img/Logo.png" alt="Besnik." />
+                        <a href="/"
+                            ><img src="./assets/img/Logo.png" alt="Besnik." />
+                        </a>
 
                         <!-- Navigation -->
                         <ul>
@@ -92,7 +94,10 @@
                     </div>
                     <div class="images">
                         <a href="#!">
-                            <img src="./assets/img/MeUndies.svg" alt="Client 1" />
+                            <img
+                                src="./assets/img/MeUndies.svg"
+                                alt="Client 1"
+                            />
                         </a>
                         <a href="#!">
                             <img src="./assets/img/slack.svg" alt="Client 2" />
@@ -101,10 +106,16 @@
                             <img src="./assets/img/amazon.svg" alt="Client 3" />
                         </a>
                         <a href="#!">
-                            <img src="./assets/img/woocommerce.svg" alt="Client 4" />
+                            <img
+                                src="./assets/img/woocommerce.svg"
+                                alt="Client 4"
+                            />
                         </a>
                         <a href="#!">
-                            <img src="./assets/img/sitepoint.svg" alt="Client 5" />
+                            <img
+                                src="./assets/img/sitepoint.svg"
+                                alt="Client 5"
+                            />
                         </a>
                     </div>
                 </div>
