--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main>
+        <main id="home">
             <header class="fixed-header">
                 <div class="content">
                     <!-- Navbar -->
@@ -28,11 +28,11 @@
 
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Services</a></li>
-                            <li><a href="#!">Resources</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#resources">Resources</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
 
                         <!-- Action -->
@@ -189,7 +189,7 @@
             </div>
 
             <!-- Featured -->
-            <div class="featured">
+            <div class="featured" id="features">
                 <div class="content">
                     <header>
                         <h2 class="sub-title">Featured Properties</h2>
@@ -341,7 +341,7 @@
             </div>
 
             <!-- Stats -->
-            <div class="stats">
+            <div class="stats" id="services">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -506,7 +506,7 @@
             </div>
 
             <!-- Subscription -->
-            <div class="subscription">
+            <div class="subscription" id="resources">
                 <div class="content">
                     <div class="body">
                         <div class="info">
@@ -528,7 +528,7 @@
             </div>
 
             <!-- Footer -->
-            <footer class="footer">
+            <footer class="footer" id="contact">
                 <div class="content">
                     <div class="row row-top">
                         <div class="colum">
